--- a/src/main/webapp/resources/style/main.css
+++ b/src/main/webapp/resources/style/main.css
@@ -73,6 +73,66 @@ Field styles
     position: absolute;
 }
 
+input[type="text"],
+input[type="checkbox"] {
+    border: 2px solid black;
+}
+
+.valid input {
+    border-color: green;
+    background-color: rgba(0, 255, 0, 0.2);
+    transition: 500ms;
+}
+
+.invalid input {
+    border-color: red;
+    background-color: rgba(255, 0, 0, 0.2);
+    transition: 500ms;
+}
+
+input[type="radio"] {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+
+    border-radius: 100%;
+    width: 20px;
+    height: 20px;
+
+    position: relative;
+    top: 4px;
+    cursor: pointer;
+}
+
+input[type="radio"]:checked {
+    border-color: black;
+    background-color: grey;
+}
+
+input[type="text"] {
+    margin-left: 3px;
+    border-radius: 5px;
+}
+
+input[type="checkbox"] {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+
+    border-radius: 20%;
+    width: 20px;
+    height: 20px;
+
+    position: relative;
+    top: 7px;
+    cursor: pointer;
+}
+
+input[type="checkbox"]:checked {
+    border-color: black;
+    background-color: grey;
+}
+
 
 
 /*
