Add more informative notification when the R field not set

--- a/src/main/webapp/resources/style/main.css
+++ b/src/main/webapp/resources/style/main.css
@@ -139,9 +139,9 @@ input[type="checkbox"]:checked {
 }
 
 .blink input[type="checkbox"] {
-    rotate: 360deg;
-    width: 30px;
+    background-color: red;
     height: 30px;
+    width: 30px;
     transition: 50ms;
 }
 
